Исправления кода для создания документации

--- a/html/md_final_test_report.html
+++ b/html/md_final_test_report.html
@@ -98,7 +98,7 @@ $(function() {
 </table>
 <h1><a class="anchor" id="autotoc_md4"></a>
 Заключение</h1>
-<p>✅ <b>ВСЕ ТЕСТЫ УСПЕШНО ПРОЙДЕНЫ!</b></p>
+<p>[PASS] <b>ВСЕ ТЕСТЫ УСПЕШНО ПРОЙДЕНЫ!</b></p>
 <p>Сервер соответствует функциональным требованиям и готов к использованию. </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
