--- a/html/server_8h.html
+++ b/html/server_8h.html
@@ -95,7 +95,7 @@ $(function() {
 <area shape="rect" title="Заголовочный файл класса Server." alt="" coords="120,5,195,32"/>
 <area shape="rect" href="main_8cpp.html" title="Точка входа серверного приложения." alt="" coords="5,80,88,107"/>
 <area shape="rect" href="server_8cpp.html" title="Реализация методов класса Server для обработки клиентских подключений." alt="" coords="113,80,202,107"/>
-<area shape="rect" href="test_8cpp.html" title="Модульные тесты для серверного приложения." alt="" coords="227,80,301,107"/>
+<area shape="rect" href="test_8cpp.html" title=" " alt="" coords="227,80,301,107"/>
 </map>
 </div>
 </div>
